# Haskell-Symbolic_Math_project

./: README.md  SymbolicMath.hi  SymbolicMath.hs  symbolic-math.cabal  Документация- Система за символно смятане.DOCX
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
