name:                symbolic-math
version:             0.1.0.0
synopsis:            A symbolic math parser
description:         A longer description of the project.
license:             BSD3
license-file:        LICENSE
author:              Your Name
maintainer:          your.email@example.com
category:            Math
build-type:          Simple
cabal-version:       >=1.10

executable symbolic-math
  main-is:             SymbolicMath.hs
  build-depends:       base >=4.7 && <5,
                       megaparsec,
                       parser-combinators,
                       text
  default-language:    Haskell2010